Fix the style issues that get inherited

--- a/demo/css/jq-toast.css
+++ b/demo/css/jq-toast.css
@@ -1,4 +1,7 @@
-.jq-toast-wrap { display: block; position: fixed; width: 250px;  pointer-events: none !important; }
+/**
+ * Jquery Toast Plugin CSS
+ */
+.jq-toast-wrap { display: block; position: fixed; width: 250px;  pointer-events: none !important; margin: 0; padding: 0; }
 .jq-toast-wrap * { margin: 0; padding: 0; }
 
 .jq-toast-wrap.bottom-left { bottom: 20px; left: 20px; }
@@ -6,12 +9,12 @@
 .jq-toast-wrap.top-left { top: 20px; left: 20px; }
 .jq-toast-wrap.top-right { top: 20px; right: 40px; }
 
-.jq-toast-single { display: block; width: 100%; padding: 10px; margin-bottom: 5px; border-radius: 4px; font-size: 12px; font-family: arial; line-height: 17px; position: relative;  pointer-events: all !important; }
+.jq-toast-single { display: block; width: 100%; padding: 10px; margin: 0px 0px 5px; border-radius: 4px; font-size: 12px; font-family: arial, sans-serif; line-height: 17px; position: relative;  pointer-events: all !important; }
 
-.jq-toast-single h2 { font-size: 14px; margin-bottom: 7px; }
-.jq-toast-single a { color: #eee; text-decoration: none; font-weight: bold; border-bottom: 1px solid white; padding-bottom: 3px; }
+.jq-toast-single h2 { font-family: arial, sans-serif; font-size: 14px; margin: 0px 0px 7px; background: none; color: inherit; line-height: inherit; }
+.jq-toast-single a { color: #eee; text-decoration: none; font-weight: bold; border-bottom: 1px solid white; padding-bottom: 3px; font-size: 12px; }
 
-.jq-toast-single ul { margin-left: 15px; }
-.jq-toast-single ul li { list-style-type: disc !important; line-height: 17px; }
+.jq-toast-single ul { margin: 0px 0px 0px 15px; background: none; padding:0px; }
+.jq-toast-single ul li { list-style-type: disc !important; line-height: 17px; background: none; margin: 0; padding: 0; }
 
 .close-jq-toast-single { position: absolute; top: 3px; right: 7px; font-size: 14px; cursor: pointer; }
