--- a/jquery.toast.css
+++ b/jquery.toast.css
@@ -1,5 +1,6 @@
 /**
- * Jquery Toast Plugin CSS
+ * jQuery toast plugin created by Kamran Ahmed copyright MIT license 2014
+ * v0.1
  */
 .jq-toast-wrap { display: block; position: fixed; width: 250px;  pointer-events: none !important; margin: 0; padding: 0; }
 .jq-toast-wrap * { margin: 0; padding: 0; }
